--- a/views/oder/order-management.ejs
+++ b/views/oder/order-management.ejs
@@ -33,6 +33,9 @@
                         </h2>
                         <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
                             <div style="margin-left: 20px;">
+                                <div>
+                                    <a href="/orders" class="nav-link">Tất Cả</a>
+                                </div>
                                 <div style="display: flex;">
                                     <a href="/orders?trangThai=1" class="nav-link">Chờ xác nhận</a>
                                 </div>
@@ -45,9 +48,6 @@
                                 </div>
                                 <div>
                                     <a href="/orders?trangThai=4" class="nav-link">Đã giao hàng</a>
-                                </div>
-                                <div>
-                                    <a href="/orders?trangThai=5" class="nav-link">Đã hủy</a>
                                 </div>
                             </div>
                         </div>
