--- a/views/users/list.ejs
+++ b/views/users/list.ejs
@@ -15,7 +15,7 @@
   <div style="display: flex;" class="grid gap-0 column-gap-3">
     <div style="flex-basis: 100%; margin-left: 0%;">
       <% if(typeof(users) !='undefined' && users.length> 0) { %>
-        <table class="table table-striped table-sm" style="flex-basis: 85%;">
+        <table class="table table-striped table-sm" style="flex-basis: 100%;">
           <thead>
             <tr class="table-dark" style="flex-basis: 90%; margin-left: 5%;">
               <th>Họ và tên</th>
@@ -51,7 +51,7 @@
     </div>
   </div>
 
-  <div class="pagination">
+  <div class="pagination" style="margin-left: 90%;">
         <a href="?page=<%= page - 1 %>&search=<%= search %>" class="btn btn-primary">Trước</a>
     <span class="current-page btn btn-secondary disabled"><%= page %></span>
     <a href="?page=<%= page + 1 %>&search=<%= search %>" class="btn btn-primary">Tiếp theo</a>
