--- a/views/statistics/statistics.ejs
+++ b/views/statistics/statistics.ejs
@@ -1,28 +1,32 @@
 <%- include ('../inc/header') %>
 
-<div style="display: flex; justify-content: right; ">
-    <div style="flex-basis: 55%; margin-right: 100px;">
-        <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center;">
+<div style="display: flex; justify-content: space-around; align-items: center; margin-top: -220px;">
+    <div>
+        <div style="width: 1000px; height: 1000px; display: flex; justify-content: center; align-items: center;">
             <canvas id="totalRevenueChart"></canvas>
         </div>
     </div>
 
-    <div style="flex-basis: 55%; justify-content: right; margin-right: 20px;">
-        <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; ">
+    <div>
+        <div style="width: 1000px; height: 1000px; display: flex; justify-content: center; align-items: center;">
             <canvas id="productTypeRevenueChart"></canvas>
         </div>
     </div>
 </div>
-
-<h2 style="margin-left: 20px; margin-top: 50px;">Top 5 Sản phẩm Bán chạy</h2>
-<div style="display: flex;" class="grid gap-0 column-gap-3">
+<div>
+    <div style="margin-left: 20px; margin-top: -150px; margin-right: 20px;" class="alert alert-info">
+      <div style="display: flex;">
+        <h2 style="margin-left: 40%;">Top 5 Sản phẩm Bán chạy</h2>
+      </div>
+    </div>
+<div style="display: flex; margin-left: 20px; margin-top: -10px; margin-right: 20px;" class="grid gap-0 column-gap-3">
     <div style="flex-basis: 100%; margin-left: 0%;">
-    <table class="table table-striped table-sm" style="flex-basis: 80%;">
+    <table class="table table-hover" style="flex-basis: 80%; background-color: v; border-collapse: collapse;">
       <thead>
-        <tr class="table-dark">
-          <th>Tên sản phẩm</th>
-          <th>Số lượng đã bán</th>
-          <th>Giá sản phẩm</th> <!-- Thêm cột Giá sản phẩm -->
+        <tr class="table-row">
+          <th style="width: 10%; border: 2px solid azure; background-color: #cff4fc; ">Tên sản phẩm</th>
+          <th style="width: 10%; border: 2px solid azure; background-color: #cff4fc; ">Số lượng đã bán</th>
+          <th style="width: 10%; border: 2px solid azure; background-color: #cff4fc; ">Giá sản phẩm</th> <!-- Thêm cột Giá sản phẩm -->
         </tr>
       </thead>
       <tbody id="topSellingProductsList"></tbody>
