--- a/views/inc/header.ejs
+++ b/views/inc/header.ejs
@@ -52,9 +52,8 @@
   <nav class="navbar navbar-expand-lg navbar-custom">
     <a class="navbar-brand" href="/">
       <img
-        src="https://cdn.discordapp.com/attachments/1093418895412576326/1212408711570788382/z5071407403811_6293090e7f74f549476cd87ea399d299.jpg?ex=65f1ba9a&is=65df459a&hm=eac1a8fa9ab1291e872d5ba69c313377151af9a4f5b61dfd44505fdc571d9081&"
+        src="uploads/logo1.png"
         alt="Logo" style="height: 60px;">
-      GenteWear
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -89,7 +88,7 @@
         <li class="nav-item">
           <a class="nav-link" href="/login">
             <img
-              src="https://cdn.discordapp.com/attachments/1093418895412576326/1218065463159033906/abc.png?ex=66064edc&is=65f3d9dc&hm=2a7a87f0654c422164d5f1c57cc43115032b5a0bdee4ba24f72180c1fc9362d8&"
+              src="uploads/abc.png"
               alt="Logout" style="height: 30px;">
           </a>
         </li>
