--- a/views/product/productPage.ejs
+++ b/views/product/productPage.ejs
@@ -2,7 +2,7 @@
   <div>
     <div style="display: flex;" class="alert alert-info">
       <div style="display: flex;">
-        <h2>Sản phẩm</h2>
+        <h4>Sản phẩm</h4>
         <form method="post" action="" style="margin-left: 150px;width: 500px;">
           <div style="display: flex;">
             <div class="navbar-form navbar-right " style="flex-basis: 70%; margin-right: 10px;">
@@ -138,7 +138,7 @@
                       Đang bán
                       <% } %>
                 </td>
-                <td style="border: 2px solid azure;"><img src="" alt="" class="img-thumbnail img-sm"
+                <td style="border: 2px solid azure;"><img src="uploads/<%=item.size[0].color[0].image%>" alt="" class="img-thumbnail img-sm"
                     style="height: 80px;max-width: 80%;"></td>
               </tr>
               <tr class="accordion-body" style="display: none;">
