--- a/views/oder/order-management.ejs
+++ b/views/oder/order-management.ejs
@@ -4,7 +4,7 @@
     switch(status) {
         case 0: return 'Đã hủy';
         case 1: return 'Chờ xác nhận';
-        case 2: return 'Chờ lấy hàng';
+        case 2: return 'Đã xác nhận';
         case 3: return 'Đang giao';
         case 4: return 'Đã giao';
         default: return 'Không xác định';
@@ -14,7 +14,7 @@
 <div>
     <div style="display: flex;" class="alert alert-info">
         <div style="display: flex;">
-            <h2>Hóa đơn</h2>
+            <h4>Hóa đơn</h4>
             <form style="margin-left: 150px;width: 500px;">
                 <div class="navbar-form navbar-right">
                     <input type="key" class="form-control" placeholder="Tìm kiếm" name="key">
@@ -49,6 +49,9 @@
                                 <div>
                                     <a href="/orders?trangThai=4" class="nav-link">Đã giao hàng</a>
                                 </div>
+                                <div>
+                                    <a href="/orders?trangThai=0" class="nav-link">Đã hủy</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -61,10 +64,11 @@
         <table class="table table-striped table-sm" style="flex-basis: 80%;">
             <thead>
                 <tr class="table-dark">
-                    <th width="250">Mã hóa đơn</th>
-                    <th width="250">Thời gian</th>
-                    <th width="300">Khách hàng</th>
-                    <th width="250">Tổng hóa đơn</th>
+                    <th >Mã hóa đơn</th>
+                    <th>Thời gian</th>
+                    <th>Khách hàng</th>
+                    <th>Tổng hóa đơn</th>
+                    <th>Trạng thái</th>
                     <th>Khách đã trả</th>
                 </tr>
             </thead>
@@ -76,6 +80,7 @@
                             <td><%= transaction.thoiGian %></td>
                             <td><%= transaction.user.fullname %></td>
                             <td><%= transaction.tongTien %></td>
+                            <td><%= getStatusText(transaction.trangThai) %></td>
                             <td><%= transaction.tongTien %></td>
                         </tr>
                         <tr class="accordion-body" style="display: none;">
@@ -165,10 +170,9 @@
                                                     <input type="hidden" name="id" value="<%= transaction._id %>">
                                                     <label for="trangThai" class="form-label">Trạng thái:</label>
                                                     <select id="trangThai" class="form-control" name="trangThai">
-                                                        <option value="0" <%= transaction.trangThai == 0 ? 'selected' : '' %>>Đã hủy</option>
-                                                        <option value="1" <%= transaction.trangThai == 1 ? 'selected' : '' %>>Chờ xác nhận</option>
-                                                        <option value="2" <%= transaction.trangThai == 2 ? 'selected' : '' %>>Chờ lấy hàng</option>
-                                                        <option value="3" <%= transaction.trangThai == 3 ? 'selected' : '' %>>Đang giao</option>
+                                                        <option value="0" <%= transaction.trangThai == 0 ? 'selected' : '' %>>Hủy đơn</option>
+                                                        <option value="2" <%= transaction.trangThai == 2 ? 'selected' : '' %>>Xác nhận đơn</option>
+                                                        <option value="3" <%= transaction.trangThai == 3 ? 'selected' : '' %>>Đang giao hàng</option>
                                                         <option value="4" <%= transaction.trangThai == 4 ? 'selected' : '' %>>Đã giao</option>
                                                     </select>
                                                     <button type="submit"
